# idlx

./: Cargo.toml  Makefile  Makefile.toml  m.py
.cargo/: config.toml
cc/: CMakeLists.txt  Makefile
cc/src/: main.cpp  types.h
lib/ix-ast/: Cargo.toml
lib/ix-compile/: Cargo.toml
lib/ix-data/: Cargo.toml
lib/ix-gen/: Cargo.toml
pkg/: Makefile.toml
pkg/ix-lsp/: Cargo.toml
pkg/ix-srv/: Cargo.toml
pkg/ix-vm/: Cargo.toml
script/: build.sh
test/: Makefile.toml
